--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,7 @@ metrics = "0.20.1"
 libproc = "0.12.0"
 rlimit = "0.8.3"
 
+[target.'cfg(target_os = "linux")'.dependencies]
+procfs = "0.14.0"
+
 [dev-dependencies]
