--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ libproc = "0.12.0"
 rlimit = "0.8.3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-procfs = "0.14.0"
+procfs = { version = "0.14.0", default-features = false }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
