--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,13 @@ rlimit = "0.8.3"
 [target.'cfg(target_os = "linux")'.dependencies]
 procfs = { version = "0.14.0", default-features = false }
 
+[target.'cfg(target_os = "windows")'.dependencies.windows]
+version = "0.39.0"
+features = [
+  "Win32_Foundation",
+  "Win32_System_Threading",
+  "Win32_System_ProcessStatus",
+]
+
 [dev-dependencies]
 assert_matches = "1.5.0"
