--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,6 @@ features = [
 
 [dev-dependencies]
 assert_matches = "1.5.0"
+axum = "0.5.15"
+metrics-exporter-prometheus = "0.11.0"
+tokio = { version = "1.20.1", features = ["full"] }
