--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ metrics = "0.20.1"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 libproc = "0.12.0"
+mach2 = "0.4"
+once_cell = "1.13.1"
 rlimit = "0.8.3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
