--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ once_cell = "1.13.1"
 rlimit = "0.8.3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
+once_cell = "1.13.1"
 procfs = { version = "0.14.0", default-features = false }
 
 [target.'cfg(target_os = "windows")'.dependencies.windows]
