Liberate from `action-rs`
It seems `action-rs` is not maintained for a while.

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -13,6 +13,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/audit-check@v1
+      - uses: actions/cache@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - name: Update local toolchain
+        run: |
+          rustup update
+          cargo install --force cargo-audit
+      - name: Toolchain info
+        run: |
+          rustc --version
+          cargo --version --verbose
+          cargo audit --version
+      - name: Install cargo-audit
+        run: |
+      - name: Audit check
+        run: |
+          cargo audit
