--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "Cross-platform Prometheus style process metrics collector of metr
 repository = "https://github.com/lambdalisue/rs-metrics-process"
 license = "MIT"
 readme = "README.md"
-keywords = ["cross-platform", "metrics", "prometheus", "open-metrics", "process"]
+keywords = [ "cross-platform", "metrics", "prometheus", "open-metrics", "process", ]
 
 [package.metadata.docs.rs]
 all-features = true
@@ -16,7 +16,7 @@ all-features = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-metrics = "0.21.0"
+metrics = "0.22.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 libproc = "0.14.2"
@@ -39,5 +39,5 @@ features = [
 [dev-dependencies]
 assert_matches = "1.5.0"
 axum = "0.7.2"
-metrics-exporter-prometheus = "0.12.0"
+metrics-exporter-prometheus = "0.13.0"
 tokio = { version = "1.20.1", features = ["full"] }
