Add `dummy` feature for non supported platforms
Based on the discussion in #36, we decided to add a `dummy` feature
that always return an empty `Metrics` for non supported platforms.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ keywords = [ "cross-platform", "metrics", "prometheus", "open-metrics", "process
 [package.metadata.docs.rs]
 all-features = true
 
+[features]
+# Enable a `dummy` collector that always return an empty `Metrics` for non supported platforms
+dummy = []
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
