--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Test
         run: |
           cargo build --release --all-features
+      - name: Test (use-gauge-on-cpu-seconds-total)
+        run: |
+          cargo build --release --features use-gauge-on-cpu-seconds-total
 
   build-dummy:
     strategy:
