Add FreeBSD support
Though FreeBSD does support procfs/linprocfs, these are not required
to be mounted (and are commontly not), so use standard always available
interfaces instead:

- Take CPU time from getrusage(2)
- Take max open files and max virtual memory size from getrlimit(2)
- Take number of open files from /dev/fd (which is the same as
  /proc/self/fd on Linux)
- Take remaining fields from kernel process structure retrieved from
  sysctl(3)

Note that this code may likely be reused for other BSD systems
(OpenBSD, NetBSD) with minimal changes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,9 @@ rlimit = "0.10.0"
 once_cell = "1.13.1"
 procfs = { version = "0.16.0", default-features = false }
 
+[target.'cfg(target_os = "freebsd")'.dependencies]
+libc = "0.2.159"
+
 [target.'cfg(target_os = "windows")'.dependencies.windows]
 version = "0.57.0"
 features = [
