Always output collected metrics from cross-platform test
This allows spoting data problems on foreign platforms

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -130,4 +130,4 @@ jobs:
           version: "${{matrix.version}}"
           run: |
             ${{matrix.prepare_cmd}}
-            cargo test
+            cargo test -- --nocapture
