--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -107,11 +107,12 @@ jobs:
   test-cross-platform:
     strategy:
       matrix:
-        # don't forget to update current os versions, see https://github.com/cross-platform-actions/action?tab=readme-ov-file#supported-platforms
         include:
-          - { os: freebsd, version: "14.1", prepare_cmd: "sudo pkg install -y rust cmake rust-bindgen-cli" }
-          # 7.6 is not supported by action@v0.25.0 yet
-          - { os: openbsd, version: "7.5", prepare_cmd: "sudo pkg_add rust cmake llvm%17; export LIBCLANG_PATH=/usr/local/llvm17/lib" }
+          - {
+              os: freebsd,
+              version: "14.1",
+              prepare_cmd: "sudo pkg install -y rust cmake rust-bindgen-cli",
+            }
       fail-fast: false
     runs-on: ubuntu-latest
     name: "test (${{matrix.os}}-${{matrix.version}})"
@@ -127,7 +128,7 @@ jobs:
             target/
           key: ${{matrix.os}}-${{matrix.version}}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Cross-platform test
-        uses: cross-platform-actions/action@v0.25.0
+        uses: cross-platform-actions/action@595d543e5d1aeb6d48c0a176965028afe56c7018
         with:
           operating_system: ${{matrix.os}}
           version: "${{matrix.version}}"
